--- a/slide.html
+++ b/slide.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	
 	<!-- jQUERY SCRIPT VOOR UITSCHUIFMENU -->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script src="//code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 
 </head>
 <body>
@@ -16,11 +16,11 @@
 	<div id="menu">
 		<!-- BUITEN BEELD -->
 		<div id="belMe"> 
-			<p>beltd me</p>
+			<p>I did it</p>
 		</div>
 		<!-- LABEL IN BEELD -->
 		<div id="belMeInUit">
-			<p>bel</p>	
+			<p>slide</p>	
 		</div>			
 	</div>
 
