--- a/slide.html
+++ b/slide.html
@@ -25,7 +25,7 @@
 	</div>
 
 <!-- #belMe (BUITEN BEELD) bestaat pas als je klikt op label -->
-<script>$("#belMe").hide();</script>
+<!--<script>//$("#belMe").hide();</script>-->
 
 <!-- JS SCRIPT VOOR UITSCHUIFMENU -->
 <script type="text/javascript" src="belMe.js"></script>
